--- a/android/210409-hilt.md
+++ b/android/210409-hilt.md
@@ -1,10 +1,10 @@
-# :fire: Hilt
+## 🔥 Hilt
 * 종속성 주입을 위해 사용하는 `Android Jetpack`의 라이브러리
 * 프로젝트의 모든 Android 클래스에 컨테이너를 제공하고 자동으로 수명주기를 관리한다.
 <br>
 
 ---
-### :sparkles: Hilt 사용의 장점
+### ✨ Hilt 사용의 장점
 * DI 라이브러리인 `Dagger`를 기반으로 빌드되어, `Dagger`가 제공하는 컴파일 시간 정확성, 런타임 성능, 확장성 및 `Android Studio` 지원의 이점을 누릴 수 있다.
 * 안드로이드 애플리케이션에서 `Dagger` 사용과 관련된 많은 보일러플레이트 코드를 줄일 수 있다.
 * 컴포넌트에 사용할 Scope 어노테이션을 자동으로 생성해준다.
@@ -19,8 +19,8 @@
 <br>
 
 ---
-### :sparkles: Hilt 사용을 위한 환경 구축
-#### :one: 프로젝트의 루트 `build.gradle` 파일에 `hilt-android-gradle-plugin` 추가
+### ✨ Hilt 사용을 위한 환경 구축
+#### 1️⃣ 프로젝트의 루트 `build.gradle` 파일에 `hilt-android-gradle-plugin` 추가
 ```xml
 buildscript {
     ...
@@ -33,7 +33,7 @@ buildscript {
 ```
 <br>
 
-#### :two: `app/build.gradle` 파일에 `apply plugin`과 `dependencies` 추가
+#### 2️⃣ `app/build.gradle` 파일에 `apply plugin`과 `dependencies` 추가
 * `Hilt`와 `DataBinding`을 모두 사용하는 프로젝트의 경우, Android Studio 버전이 4.0 이상이어야 한다.
 ```xml
 ...
@@ -51,7 +51,7 @@ dependencies {
 ```
 <br>
 
-#### :three: `app/build.gradle`에 Java 8 `compileOptions` 추가
+#### 3️⃣ `app/build.gradle`에 Java 8 `compileOptions` 추가
 ```xml
 android {
     ...
@@ -64,8 +64,7 @@ android {
 <br>
 
 ---
-### :sparkles: Hilt 구현 방법
-#### :heavy_check_mark: Hilt 애플리케이션 클래스 생성
+### ✨ Hilt 애플리케이션 클래스 생성
 * `Hilt`를 사용하는 모든 앱에는 `@HiltAndroidApp` 어노테이션이 있는 `Application` 클래스가 존재해야 한다.
 * `@HiltAndroidApp` 은 애플리케이션 레벨의 종속성 컨테이너를 제공하는 베이스 클래스를 포함하는 `Hilt`의 코드를 생성한다.
 ```kotlin
@@ -74,7 +73,8 @@ class ExampleApplication : Application() { … }
 ```
 <br>
 
-#### :heavy_check_mark: Android 클래스에 종속성 삽입
+---
+### ✨ Android 클래스에 종속성 삽입
 * `Hilt`가 Application 클래스에 설정되고 애플리케이션 레벨의 구성요소를 사용할 수 있게 되면, `Hilt`는 `@AndroidEntryPoint` 어노테이션이 있는 다른 Android 클래스에 종속성을 제공할 수 있다.
 * `Hilt`가 지원하는 Android 클래스
   * Application (`@HiltAndroidApp` 사용)
@@ -84,17 +84,16 @@ class ExampleApplication : Application() { … }
   * View
   * Service
   * BroadcastReceiver
-```kotlin
-@AndroidEntryPoint
-class ExampleActivity : AppCompatActivity() { ... }
-```
-
 * `@AndroidEntryPoint`를 이용하여 Android 클래스에 어노테이션을 달아주었다면, 해당 클래스에 종속된 Android 클래스에도 어노테이션을 추가해주어야 한다.
 * `@AndroidEntryPoint`는 프로젝트의 Android 클래스에 대해 개별적인 `Hilt` 컴포넌트를 생성한다.
 * 이러한 `Hilt` 컴포넌트는 상위 클래스로부터 종속성 주입을 받을 수 있다.
 * 컴포넌트로부터 종속성을 얻으려면 필드 주입을 위한 `@Inject`를 사용해야 한다.
   * `Hilt`에 의해 주입된 필드는 `private`일 수 없다. 
   * `Hilt`를 통해 `private` 필드를 주입한 경우, 컴파일 에러가 발생한다.
+* `Hilt`가 주입한 클래스는 주입을 사용한 다른 베이스 클래스를 지닐 수 있다.
+* 이러한 클래스들이 추상 클래스일 경우, `@AndroidEntryPoint` 어노테이션이 필요하지 않다.
+<br>
+
 ```kotlin
 @AndroidEntryPoint
 class ExampleActivity : AppCompatActivity() {
@@ -103,12 +102,10 @@ class ExampleActivity : AppCompatActivity() {
     ...
 }
 ```
-
-* `Hilt`가 주입한 클래스는 주입을 사용한 다른 베이스 클래스를 지닐 수 있다.
-* 이러한 클래스들이 추상 클래스일 경우, `@AndroidEntryPoint` 어노테이션이 필요하지 않다.
 <br>
 
-#### :heavy_check_mark: Hilt binding 정의
+---
+### ✨ Hilt binding 정의
 * 필드 주입을 수행하기 위해서는 `Hilt`가 해당 컴포넌트에서 필요한 종속성의 인스턴스를 제공하는 방법을 알아야 한다.
 * binding은 종속 타입의 인스턴스를 제공하는데에 필수적인 정보를 포함한다.
 * `Hilt`에 바인딩 정보를 제공하기 위해서 constructor injection을 사용한다.
@@ -123,7 +120,8 @@ class AnalyticsAdapter @Inject constructor(
 * `AnalyticsAdapter`는 `AnalyticsService`를 종속성으로 지니므로, `Hilt`는 `AnalyticsService`의 인스턴스를 어떻게 제공하는지에 대한 방법을 반드시 알고있어야 한다.
 <br>
 
-#### :heavy_check_mark: Hilt modules
+---
+### ✨ Hilt modules
 * 인터페이스, 외부 라이브러리의 클래스 등 특정 타입은 constructor injection이 불가능 할 수 있다.
 * 이러한 경우, `Hilt module`을 이용하여 바인딩 정보를 `Hilt`에 제공할 수 있다.
 * `Hilt module`은 `@Module` 어노테이션이 있는 클래스이며, `Hilt`에 특정 타입의 인스턴스를 제공하는 방법을 알린다.
@@ -132,7 +130,7 @@ class AnalyticsAdapter @Inject constructor(
 * `Hilt`의 코드 생성은 `Hilt`를 사용하는 모든 `Gradle module`에 접근해야 하므로, Application 클래스를 컴파일하는 `Gradle module` 역시 모든 `Hilt module`과 constructor-injected 클래스를 지니고 있어야 한다.
 <br>
 
-##### :zap: `@Binds`를 사용하여 인터페이스 인스턴스 주입
+#### ✔️ `@Binds`를 사용하여 인터페이스 인스턴스 주입
 * constructor injection이 불가능할 경우, `Hilt module` 내의 `@Binds` 어노테이션을 이용하여 추상 함수를 만들어서 바인딩 객체와 함께 Hilt를 제공할 수 있다.
 * `@Bind` 어노테이션은 `Hilt`가 인터페이스의 인스턴스를 필요로 할 때 어떤 implementation을 사용해야할지 알려준다.
 * `@Bind` 어노테이션이 있는 함수는 다음의 정보를 `Hilt`에 알려준다
@@ -163,7 +161,7 @@ abstract class AnalyticsModule {
 * `@InstallIn(ActivityComponent::class)` 어노테이션은 `AnalyticsModule`의 모든 종속성을 앱의 모든 액티비티에서 사용할 수 있음을 의미한다.
 <br>
 
-##### :zap: `@Provides`를 사용하여 인스턴스 주입
+#### ✔️ `@Provides`를 사용하여 인스턴스 주입
 * 인터페이스는 타입을 constructor-inject 할 수 없는 유일한 경우가 아니다.
 * constructor-injection은 외부 라이브러리(`Retrofit`, `Room` 등)의 클래스 등과 같은 소유하고 있지 않은 클래스 및 빌더 패턴으로 생성된 인스턴스에서도 불가능하다.
 * 이러한 경우, Hilt module 내부에 함수를 만들고 해당 함수를 `@Provides` 어노테이션으로 처리하여 타입 인스턴스를 제공하는 방법을 `Hilt`에 알릴 수 있다.
@@ -189,7 +187,7 @@ object AnalyticsModule {
 ```
 <br>
 
-##### :zap: 동일한 타입에 대해 여러 바인딩 제공
+#### ✔️ 동일한 타입에 대해 여러 바인딩 제공
 * 같은 타입의 종속성에 여러 구현을 제공하기 위해 `Hilt`가 필요한 경우, `Hilt`에 어려 종류의 바인딩을 제공해야 한다.
 * qualifier를 통해 여러 종류의 바인딩을 정의할 수 있다.
 * qualifier는 해당 타입에 여러 종류의 바인딩이 정의되어있는 경우, 해당 타입의 특정 바인딩을 식별하는데 사용한다.
@@ -270,7 +268,7 @@ class ExampleActivity: AppCompatActivity() {
 ```
 <br>
 
-##### :zap: 사전 정의된 `Hilt` qualifier
+#### ✔️ 사전 정의된 `Hilt` qualifier
 * Hilt는 사용자 지정 바인딩에 종속성으로 주입할 수 있는 몇 가지의 미리 정의된 qualifier를 제공한다.
 * 에를 들어, 애플리케이션 또는 액티비티에서 `Context` 클래스가 필요한 경우 `Hilt`는 `@ApplicationContext`와 `@ActivityContext` qualifier를 제공한다.
 ```kotlin
@@ -282,7 +280,7 @@ class AnalyticsAdapter @Inject constructor(
 <br>
 
 ---
-#### :heavy_check_mark: Android 클래스용으로 생성된 컴포넌트
+### ✨ Android 클래스용으로 생성된 컴포넌트
 * 필드 주입을 수행할 수 있는 각 Android 클래스에는 `@InstallIn` 어노테이션으로부터 참조할 수 있는 관련 `Hilt` 컴포넌트가 있다.
 * 각 `Hilt` 컴포넌트는 해당 Android 클래스에 바인딩을 주입하는 역할을 한다.
 <br>
@@ -301,7 +299,7 @@ class AnalyticsAdapter @Inject constructor(
 * `Hilt`는 `SingletonComponent`로부터 바로 `BroadcastReceiver`를 주입하기 때문에 `BroadcastReceiver`에 대해서는 컴포넌트를 생성하지 않는다.
 <br>
 
-##### :zap: 컴포넌트 생명주기
+#### ✔️ 컴포넌트 생명주기
 * `Hilt`는 생성된 컴포넌트 클래스의 인스턴스를 해당 Android 클래스의 생명주기에 따라 자동으로 생성하고 파괴한다.
 <br>
 
@@ -315,11 +313,12 @@ class AnalyticsAdapter @Inject constructor(
 |`ViewComponent`|`View#super()`|`View` destroyed|
 |`ViewWithFragmentComponent`|`View#super()`|`View` destroyed|
 |`ServiceComponent`|`Service#onCreate()`|`Service#onDestroy()`|
+<br>
 
 * `ActivityRetainedComponent`는 `Activity#onCreate()`의 시작에 생성되고 `Activity#onDestroy()`의 끝에 파괴되므로, 구성 변경 전체에 걸쳐 살아있다.
 <br>
 
-##### :zap: 컴포넌트 Scope
+#### ✔️ 컴포넌트 Scope
 * 기본적으로 `Hilt`의 모든 바인딩은 Scope가 지정되지 않으며, 앱에서 바인딩을 요청할 때마다 `Hilt`는 필요한 유형의 새 인스턴스를 만든다.
 * 하지만 `Hilt`의 바인딩을 특정 컴포넌트 Scope로 지정할 경우, 바인딩 범위가 지정된 컴포넌트의 인스턴스당 한 번만 Scope 바인딩을 생성하고 해당 바인딩에 대한 모든 요청은 동일한 인스턴스를 공유한다.
 <br>
@@ -334,6 +333,7 @@ class AnalyticsAdapter @Inject constructor(
 |`View`|`ViewComponent`|`@ViewScoped`|
 |`View` annotated with `@WithFragmentBindings`|`ViewWithFragmentComponent`|`@ViewScoped`|
 |`Service`|`ServiceComponent`|`@ServiceScoped`|
+<br>
 
 * 컴포넌트의 바인딩 범위를 지정하면 제공된 객체의 컴포넌트가 제거될 때까지 메모리에 남아있기 때문에 비용이 많이 들 수 있다.
 * 때문에 범위가 지정된 바인딩의 사용을 최소화하는 것이 좋다.
@@ -368,13 +368,13 @@ object AnalyticsModule {
 ```
 <br>
 
-##### :zap: 컴포넌트 Hierarchy
+#### ✔️ 컴포넌트 Hierarchy
 * 컴포넌트에 모듈을 installing하면 컴포넌트 hierarchy에 따라 해당 컴포넌트 또는 하위의 다른 자식 컴포넌트의 바인딩이 종속성으로서 해당 컴포넌트의 바인딩에 접근할 수 있다.
 * Hilt가 생성하는 컴포넌트의 Hierarchy :arrow_down:
 <img width="419" alt="스크린샷 2021-04-10 오후 5 59 27" src="https://user-images.githubusercontent.com/47806943/114264545-7e1a0000-9a26-11eb-8c64-412fa87b5215.png">
 <br>
 
-##### :zap: 컴포넌트 기본 바인딩
+#### ✔️ 컴포넌트 기본 바인딩
 * 각각의 `Hilt` 컴포넌트에는 `Hilt`가 사용자 커스텀 바인딩에 종속성으로 주입할 수 있는 기본 바인딩이 함께 제공된다.
 * `Hilt`는 single activity 컴포넌트 정의를 바탕으로 모든 activity를 주입하기 때문에 이러한 바인딩은 특정 하위 클래스가 아닌 일반 `Activity` 및 `Fragment` 유형이다.
 * 각 `Activity`는 이 컴포넌트의 다른 인스턴스를 지닌다.
@@ -390,6 +390,7 @@ object AnalyticsModule {
 |`ViewComponent`|`Application`, `Activity`, `View`|
 |`ViewWithFragmentComponent`|`Application`, `Activity`, `Fragment`, `View`|
 |`ServiceComponent`|`Application`, `Service`|
+<br>
 
 * application context의 바인딩은 `@ApplicationContext` 어노테이션을 통해서도 가능하다.
 ```kotlin
@@ -417,7 +418,8 @@ class AnalyticsAdapter @Inject constructor(
 ```
 <br>
 
-#### :heavy_check_mark: Hilt에서 지원하지 않는 클래스에 종속성 주입
+---
+### ✨ Hilt에서 지원하지 않는 클래스에 종속성 주입
 * `Hilt`는 일반적인 Android 클래스에 대한 지원을 제공하지만 `Hilt`가 지원하지 않는 클래스에서 필드 주입을 수행해야 하는 경우가 있을 수 있다.
 * 이러한 경우, `@EntryPoint` 어노테이션을 사용하여 entry point를 만들 수 있다.
 * 이러한 entry point는 `Hilt`에서 관리하는 코드와 그렇지 않은 코드 사이의 경계이며, Hilt가 관리하는 객체의 그래프에 코드가 처음 입력되는 지점이다.
@@ -444,5 +446,5 @@ class ExampleContentProvider : ContentProvider() {
 <br>
 
 ---
-### :memo: Reference
+### 📝 References
 * https://developer.android.com/training/dependency-injection
